Don't use personal accounts.

--- a/samples/shazam/cfg-local.yml
+++ b/samples/shazam/cfg-local.yml
@@ -1,5 +1,5 @@
 
 users:
         me@dev:
-                username: rdhallman
-                password: v47Hn2xi&3
+                username: testuser
+                password: 123456789
