--- a/samples/shazam/Rakefile
+++ b/samples/shazam/Rakefile
@@ -17,15 +17,17 @@ desc "Latest migration"
 task :latest => [:add_middle_name_zip]
 
 desc "Add state and zip columns to Persons table"
-task :add_middle_name_zip => :add_state_and_zip do |migrate|
-  migrate.up do
+#author :rdhallman, created: "5-10-2018"
+task :add_middle_name_zip => :add_state_and_zip do |m|
+  puts "Starting migration task..."
+  m.up do
       <<~SQL
           ALTER TABLE Persons 
               ADD MiddleName VARCHAR(64),
               ADD NameSuffix VARCHAR(16);
       SQL
   end
-  migrate.down do
+  m.down do
       <<~SQL
           ALTER TABLE Persons 
               DROP COLUMN MiddleName,
