--- a/samples/shazam/cfg-local.yml
+++ b/samples/shazam/cfg-local.yml
@@ -1,5 +1,5 @@
 
 users:
         me@dev:
-                username: testuser
-                password: 123456789
+                username: rdhallman
+                password: v47Hn2xi&3
